--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,9 @@
 
   <body>
     <header>
+      <row>
+        header text
+      </row>
       <nav class="horizontal" id="mainlinks">
         <ul>
           <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">I</a></li>
@@ -41,6 +44,11 @@
             Qui aspernatur fugiat tempore, dolorum repellendus nihil dignissimos
             mollitia quo! Quam!
           </p>
+          <a id="leftArticlePG1">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, mollitia quibusdam repellat blanditiis temporibus doloremque saepe, natus hic exercitationem aut repudiandae sapiente facilis, odio fugiat cumque maiores aliquid asperiores quisquam?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi nisi aliquid fugiat odit rerum ratione ducimus, ab enim voluptas, dolor consequuntur magnam est accusamus a voluptate aut cum eligendi! Saepe!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde quo dignissimos aspernatur dicta est ex totam pariatur dolorum repellat doloremque id hic soluta, autem itaque consectetur cum odit amet reiciendis?
+          </a>
         </div>
         <div class="col-2-3">
             <div class="row">
@@ -58,7 +66,7 @@
       </div>
     </article>
     <footer>
-        the bottom
+        Contact Me - (phone number) , i didnt know where to put the character refs, so heres some i thought were neat, &#208;, &#920;
     </footer>
   </body>
 </html>
