--- a/Index.html
+++ b/Index.html
@@ -13,23 +13,24 @@
 
   <body>
     <header>
-      <row>
-        header text
-      </row>
+      <row> header text </row>
       <nav class="horizontal" id="mainlinks">
         <ul>
-          <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">I</a></li>
           <li>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Dont</a>
+            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Home</a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Have</a>
+            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">About Me</a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Five</a>
+            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0"
+              >Skills and Services</a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">links</a>
+            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">My Work</a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Contact Me</a>
           </li>
         </ul>
       </nav>
@@ -45,28 +46,57 @@
             mollitia quo! Quam!
           </p>
           <a id="leftArticlePG1">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, mollitia quibusdam repellat blanditiis temporibus doloremque saepe, natus hic exercitationem aut repudiandae sapiente facilis, odio fugiat cumque maiores aliquid asperiores quisquam?
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi nisi aliquid fugiat odit rerum ratione ducimus, ab enim voluptas, dolor consequuntur magnam est accusamus a voluptate aut cum eligendi! Saepe!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde quo dignissimos aspernatur dicta est ex totam pariatur dolorum repellat doloremque id hic soluta, autem itaque consectetur cum odit amet reiciendis?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit,
+            mollitia quibusdam repellat blanditiis temporibus doloremque saepe,
+            natus hic exercitationem aut repudiandae sapiente facilis, odio
+            fugiat cumque maiores aliquid asperiores quisquam? Lorem ipsum dolor
+            sit amet, consectetur adipisicing elit. Modi nisi aliquid fugiat
+            odit rerum ratione ducimus, ab enim voluptas, dolor consequuntur
+            magnam est accusamus a voluptate aut cum eligendi! Saepe! Lorem
+            ipsum, dolor sit amet consectetur adipisicing elit. Unde quo
+            dignissimos aspernatur dicta est ex totam pariatur dolorum repellat
+            doloremque id hic soluta, autem itaque consectetur cum odit amet
+            reiciendis?
           </a>
         </div>
         <div class="col-2-3">
-            <div class="row">
-                <header>header text</header>
-                <div class="col-1-2">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dolores, libero laboriosam commodi explicabo cupiditate ipsam voluptatum minima nisi quisquam ad saepe, earum voluptate molestiae, neque doloremque nostrum quod est.</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab suscipit totam ea animi error vitae saepe iste sint atque laudantium modi eaque, veniam hic delectus cupiditate ad aliquid. Molestiae, assumenda.</p>
-                </div>
-                <div class="col-1-2">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, dolor veritatis? Dignissimos maiores maxime vero at provident magnam repellendus quod obcaecati inventore quia? Recusandae, sint officia distinctio quo ea natus?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quos, et qui cupiditate illum vel expedita cumque sed perspiciatis doloremque numquam rerum sint dolores amet ipsum dolorum porro, nostrum totam.</p>
-                </div>
+          <div class="row">
+            <header>header text</header>
+            <div class="col-1-2">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+                dolores, libero laboriosam commodi explicabo cupiditate ipsam
+                voluptatum minima nisi quisquam ad saepe, earum voluptate
+                molestiae, neque doloremque nostrum quod est.
+              </p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
+                suscipit totam ea animi error vitae saepe iste sint atque
+                laudantium modi eaque, veniam hic delectus cupiditate ad
+                aliquid. Molestiae, assumenda.
+              </p>
             </div>
+            <div class="col-1-2">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+                dolor veritatis? Dignissimos maiores maxime vero at provident
+                magnam repellendus quod obcaecati inventore quia? Recusandae,
+                sint officia distinctio quo ea natus?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+                quos, et qui cupiditate illum vel expedita cumque sed
+                perspiciatis doloremque numquam rerum sint dolores amet ipsum
+                dolorum porro, nostrum totam.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </article>
     <footer>
-        Contact Me - (phone number) , i didnt know where to put the character refs, so heres some i thought were neat, &#208;, &#920;
+      footer text, i didnt know where to put the character refs, so heres some i
+      thought were neat, &#208;, &#920;
     </footer>
   </body>
 </html>
