--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Erik_Ward_Website</title>
 
     <link href="MP_Styles.css" rel="stylesheet" />
     <link href="MP_Grids.css" rel="stylesheet" />
@@ -17,20 +17,20 @@
       <nav class="horizontal" id="mainlinks">
         <ul>
           <li>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Home</a>
+            <a href="Index.html">Home</a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">About Me</a>
+            <a href="Page_2.html">About Me</a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0"
+            <a href="Skills_and_Services.html"
               >Skills and Services</a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">My Work</a>
+            <a href="My_Work.html">My Work</a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Contact Me</a>
+            <a href="Contact_Me.html">Contact Me</a>
           </li>
         </ul>
       </nav>
