still dont like messages

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <row> header text </row>
+      <img src="header-placeholder.jpg" alt="header text">
       <nav class="horizontal" id="mainlinks">
         <ul>
           <li>
