--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="MP_Styles.css" rel="stylesheet" />
+    <link href="MP_Grids.css" rel="stylesheet" />
+    <link href="Reset.css" rel="stylesheet" />
 </head>
 <body>
-    
-</body>
+    <header>
+      <row> header text </row>
+      <nav class="horizontal" id="mainlinks">
+        <ul>
+          <li>
+            <a href="Index.html">Home</a>
+          </li>
+          <li>
+            <a href="About_Me.html">About Me</a>
+          </li>
+          <li>
+            <a href="Skills_and_Services.html"
+              >Skills and Services</a>
+          </li>
+          <li>
+            <a href="My_Work.html">My Work</a>
+          </li>
+          <li>
+            <a href="Contact_Me.html">Contact Me</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <footer>
+        footer text, i didnt know where to put the character refs, so heres some i
+        thought were neat, &#208;, &#920;
+      </footer>
+</body>   
 </html>
+
